--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
   
   <body>
-    <p style="color: #f00; font-size: 30px;>مرحباً بكم في موقعي</p>
+    <p style="color: #f00; font-size: 30px;">مرحباً بكم في موقعي</p>
   </body>
   
 </html>
